--- a/Demo.PL/Demo.PL.csproj
+++ b/Demo.PL/Demo.PL.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Cemo.BLL\Cemo.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\images\" />
+  </ItemGroup>
+
 </Project>
